--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Diễn Châu District</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top border">
         <div class="container">
             <a class="navbar-brand" href="#"><span class="text-warning">Diễn</span>Châu</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -94,15 +94,15 @@
 
     <section id="about" class="about p-4">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-md-12 col-12 mb-3">
+            <div class="row border">
+                <div class="col-lg-5 col-md-12 col-12 mt-5">
                     <div class="about-img">
                         <img src="img/img-4" alt="" class="img-fluid">
                     </div>
                 </div>
-                <div class="col-lg-7 col-md-12 col-12 ps-lg-5 mt-md-5">
+                <div class="col-lg-7 col-md-12 col-12 ps-lg-5">
                     <div class="about-text">
-                        <h2 class="mb-3 text-center">VỊ TRÍ ĐỊA LÝ</h2>
+                        <h2 class="text-center">VỊ TRÍ ĐỊA LÝ</h2>
                         <p>Diễn Châu là huyện đồng bằng ven biển của tỉnh Nghệ An, nằm ở tọa độ 105,30 - 105,45 vĩ độ Bắc, 18,20 - 19,50 kinh độ
                         Đông. Địa bàn huyện trải dài theo hướng Bắc - Nam. Phía Bắc giáp huyện Quỳnh Lưu, phía Nam giáp huyện Nghi Lộc, phía Tây
                         và Tây Bắc giáp huyện Yên Thành, phía Đông giáp biển đông. 
@@ -141,7 +141,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-12 col-lg-4">
-                        <div class="card text-white text-center bg-dark pb-2">
+                        <div class="card text-white text-center bg-dark pb-2 h-100">
                             <div class="card-body">
                                 <i class="bi bi-subtract"></i>
                                 <h3 class="card-title">Best quality</h3>
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-12 col-lg-4">
-                        <div class="card text-white text-center bg-dark pb-2">
+                        <div class="card text-white text-center bg-dark pb-2 h-100">
                             <div class="card-body">
                                 <i class="bi bi-subtract"></i>
                                 <h3 class="card-title">Best quality</h3>
@@ -181,7 +181,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-12 col-lg-4">
-                        <div class="card text-white text-center bg-dark pb-2">
+                        <div class="card text-white text-center bg-dark pb-2 h-100">
                             <div class="card-body">
                                 <i class="bi bi-subtract"></i>
                                 <h3 class="card-title">Best quality</h3>
@@ -216,8 +216,8 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-4">
-                    <div class="card text-center bg-white pb-2">
-                        <div class="card-body text-dark">
+                    <div class="card text-center bg-white pb-2 h-100">
+                        <div class="card-body text-dark h-100">
                             <div class="img-arena mb-4">
                                 <img src="img/img-5.jpg" class="img-fluid">
                                 <h3 class="card-title mt-3">CHÙA CỔ AM</h3>
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-12 col-lg-4">
-                    <div class="card text-center bg-white pb-2">
+                    <div class="card text-center bg-white pb-2 h-100">
                         <div class="card-body text-dark">
                             <div class="img-arena mb-4">
                                 <img src="img/img-6.jpg" class="img-fluid">
@@ -252,8 +252,8 @@
                 </div>
                 <div class="col-12 col-md-12 col-lg-4">
                     <div class="card text-center bg-white pb-2">
-                        <div class="card-body text-dark">
-                            <div class="img-arena mb-4">
+                        <div class="card-body text-dark h-100">
+                            <div class="img-arena mb-4 ">
                                 <img src="img/img-7.jpg" class="img-fluid">
                                 <h3 class="card-title mt-3">BÃI BIỂN DIỄN THÀNH</h3>
                                 <p class="lead">
