--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="carousel-item" data-bs-interval="2000">
                 <img src="img/img-2.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption text-white">
-                    <h5>Cảnh sắt Diễn Châu</h5>
+                    <h5>Cảnh sắc Diễn Châu</h5>
                     <p>Là một địa phương giáp biển và có núi, Diễn Châu quy tụ rất nhiều cảnh đẹp.</p>
                     <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
                 </div>
